# chaoxing-homework-review

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  README.zh.md  main.py  pyproject.toml
scripts/: __init__.py  chaoxing_auth.py  chaoxing_client.py  chaoxing_collect.py  chaoxing_parser.py  homework_review.py  review_naming.py
skills/homework-review/: SKILL.md
skills/homework-review/agents/: openai.yaml
tests/: test_chaoxing_collect.py  test_homework_review.py  test_main_cli.py  test_review_naming.py
