[project]
name = "homework-review"
version = "0.1.0"
description = "Generate review documents from Chaoxing homework JSON exports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-docx>=1.1.2",
]

[project.scripts]
homework-review = "scripts.homework_review:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scripts*"]
