[project]
name = "homework-review"
version = "0.1.0"
description = "Generate review documents from Chaoxing homework JSON exports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "inquirerpy>=0.3.4",
    "lxml>=6.1.1",
    "playwright>=1.60.0",
    "python-docx>=1.1.2",
    "requests>=2.34.2",
]

[project.scripts]
homework-review = "scripts.homework_review:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
